<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="169dp"
        android:layout_marginBottom="393dp"
        android:importantForAutofill="no"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvSaida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titular" />

        <RadioButton
            android:id="@+id/rbHorista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horista" />

    </RadioGroup>

    <EditText
        android:id="@+id/nTempoAnos"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/tempoAnos"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/nHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nSalario"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:ems="10"
        android:hint="@string/salario"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/nValorHora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nHoras"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/horas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/nValorHora"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/valorHorista"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTempoAnos" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:importantForAutofill="no"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nSalario" />

    <TextView
        android:id="@+id/tvSaida"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>